--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -1,5 +1,5 @@
 ---
-import { Image, Picture } from '@astrojs/image/components';
+import { Image, Picture } from "@astrojs/image/components";
 
 import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 import Dropdown from "./dropdown.astro";
@@ -43,7 +43,8 @@ const menuitems = [
 ---
 
 <Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-7 sm:my-8">
+  <header
+    class="flex flex-col lg:flex-row justify-between items-center my-7 sm:my-8">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg">
