--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -23,13 +23,13 @@ import heroImage from "images/oceanview.jpg";
   </div>
   <div>
     <h1
-      class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Rentals furnished in a modern style.
+      class="text-5xl lg:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
+      Enjoy a memorable stay with us
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Make yourself comfortable in our short-term rentals, complete with
-      hotel-like amenities and the conveniences of home. We accommodate both
-      business travelers and families.
+      Make yourself comfortable in one of our rentals, complete with everything
+      you may need to make you feel at home. Creating memories for both business
+      and destination travelers.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
