--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,9 @@
 import { SEO } from "astro-seo";
 import Header from "@components/header/header.astro";
 import Footer from "@components/footer.astro";
-import "@fontsource/inter/variable.css";
+// import "@fontsource/inter/variable.css";
+import "@fontsource/poppins";
+import "animate.css";
 
 export interface Props {
   title: string;
@@ -38,6 +40,20 @@ const makeTitle = title
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <script
+      type="text/javascript"
+      src="https://platform.hostfully.com/assets/js/pikaday.js"></script>
+
+    <script
+      type="text/javascript"
+      src="https://platform.hostfully.com/assets/js/leadCaptureWidget_2.0.js"
+    ></script>
+
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
@@ -56,9 +72,11 @@ const makeTitle = title
       }}
     />
   </head>
-  <body>
+  <body class="min-h-screen flex flex-col bg-[#fffbf4]">
     <Header />
-    <slot />
+    <div class="grow">
+      <slot />
+    </div>
     <Footer />
     <style is:global>
       /* Improve Page speed */
@@ -67,5 +85,46 @@ const makeTitle = title
         content-visibility: auto;
       }
     </style>
+
+    <script>
+      var widget = new Widget(
+        "leadWidget",
+        "f0343a25-3713-4e40-84dc-3ee8d7266fcb",
+        {
+          maximun_availability: "2026-05-29T05:06:36.409Z",
+          type: "agency",
+          fields: ["phone", "notes"],
+          showAvailability: true,
+          lang: "US",
+          minStay: true,
+          price: true,
+          hidePriceWithoutDates: false,
+          cc: false,
+          emailClient: true,
+          saveCookie: true,
+          showDynamicMinStay: true,
+          backgroundColor: "#FFFFFF",
+          buttonSubmit: { backgroundColor: "#caad86" },
+          showPriceDetailsLink: true,
+          showGetQuoteLink: true,
+          labelColor: "#c7a67b",
+          showTotalWithoutSD: true,
+          redirectURL: false,
+          showDiscount: true,
+          includeReferrerToRequest: true,
+          customDomainName: null,
+          source: null,
+          aid: "ORB-49587220416635719",
+          clickID: null,
+          valuesByDefaults: {
+            checkIn: { value: "" },
+            checkOut: { value: "" },
+            guests: { value: "" },
+            discountCode: { value: "" },
+          },
+          pathRoot: "https://platform.hostfully.com/",
+        }
+      );
+    </script>
   </body>
 </html>
