--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 
 import Layout from "../layouts/Layout.astro";
 
@@ -60,7 +60,8 @@ const faq = [
           }
         </ul>
 
-        <div class="px-8 py-6 border flex flex-col sm:flex-row gap-8 items-center justify-between">
+        <div
+          class="px-8 py-6 border flex flex-col sm:flex-row gap-8 items-center justify-between">
           <div class="flex flex-col sm:flex-row gap-5 items-center">
             <Image
               src={sweepingImage}
@@ -79,8 +80,7 @@ const faq = [
 
           <a
             href="/contact"
-            class="whitespace-nowrap rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent inline-flex gap-1 items-center justify-center"
-          >
+            class="whitespace-nowrap rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent inline-flex gap-1 items-center justify-center">
             <Icon name="peace-hand" class="invert w-5 mr-2" />
             Get In Contact
           </a>
