--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,311 @@
 ---
+import { Icon } from "astro-icon";
+import { Image } from "astro:assets";
+
+import Layout from "@layouts/Layout.astro";
+import Amenities from "@components/amenities.astro";
 import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
-import Layout from "@layouts/Layout.astro";
+import Roi from "@components/roi.astro";
+
+import heroImage from "assets/images/hero.jpg";
+import aboutImage from "assets/images/about.jpg";
 ---
 
 <Layout title="">
   <Container>
-    <Hero />
+    <!-- Hero -->
+    <section class="relative bg-[#fffbf4]">
+      <div class="mx-auto max-w-screen-2xl lg:flex">
+        <!-- Content -->
+        <div
+          class="px-6 relative lg:max-w-[60%] py-10 self-center lg:px-16 z-10">
+          <h1
+            class="mb-8 text-4xl sm:text-6xl lg:text-7xl animate__fadeInUp animate__animated">
+            Collection of quality furnished rental properties
+          </h1>
+          <p
+            class="max-w-xl mb-12 font-light text-neutral-500 text-lg sm:text-xl lg:text-2xl !leading-relaxed animate__fadeInUp animate__animated">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            voluptates quae ratione! Voluptas facere iusto quaerat.
+          </p>
+          <div>
+            <a
+              href="#"
+              class="inline-flex px-6 py-3 text-white bg-black animate__fadeInUp animate__animated">
+              Book Your Stay</a
+            >
+            <a href="/contact"></a>
+          </div>
+        </div>
+
+        <!-- Image Desktop -->
+        <div
+          class="hidden lg:block top-0 relative w-full lg:max-w-[30%] lg:justify-self-end lg:self-center lg:h-full">
+          <Image src={aboutImage} alt="Home" class="w-full" />
+          <div
+            class="absolute bottom-[10%] left-[-25%] w-60 h-60 xl:w-80 xl:h-80 xl:left-[-33%]">
+            <div
+              class="absolute w-full h-full scale-105 bg-emerald-800 rounded-full left-5">
+            </div>
+
+            <Image
+              src={aboutImage}
+              alt="Home"
+              class="relative w-full rounded-full aspect-square"
+            />
+          </div>
+        </div>
+
+        <!-- Image Mobile -->
+        <!-- <div class="lg:hidden h-80">
+          <Image src={aboutImage} alt="Home" class="w-full h-full" />
+          <div class="absolute bottom-[25%] right-[-15%] w-64 h-64">
+            <div
+              class="absolute w-full h-full scale-105 bg-yellow-500 rounded-full left-5">
+            </div>
+
+            <Image
+              src={aboutImage}
+              alt="Home"
+              class="relative w-full rounded-full aspect-square"
+            />
+          </div>
+        </div> -->
+      </div>
+
+      <div
+        class="mx-auto max-w-screen-xl px-16 py-24 grid md:grid-cols-2 gap-12 md:gap-0">
+        <div class="relative w-11/12 grid items-center">
+          <Image
+            src={aboutImage}
+            alt="Home"
+            class="relative w-full rounded-full h-56"
+          />
+
+          <div class="absolute -right-12 z-10 bg-emerald-800 rounded-full">
+            <Icon
+              pack="feather"
+              name="external-link"
+              class="w-6 m-10 text-white"
+            />
+          </div>
+        </div>
+
+        <div class="grid items-center pl-4 md:ml-12">
+          <div class="relative flex items-center">
+            <div class="w-px h-32 bg-black mr-8 block"></div>
+
+            <p class="text-3xl text-gray-600">
+              We're an award winning interior design agency. We regard every
+              inch of your space.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <Amenities /> -->
+    <section class="bg-black text-neutral-400 px-12">
+      <div class="max-w-screen-xl py-16 mx-auto sm:py-20">
+        <div class="grid gap-12 lg:grid-cols-2 sm:gap-16 lg:gap-20">
+          <div class="self-center">
+            <h2 class="mb-4 text-5xl text-white sm:text-6xl sm:mb-6">
+              A design so unique, it was created for you
+            </h2>
+            <p class="leading-relaxed text-lg">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque
+              illo a accusamus tempore maxime quibusdam dignissimos eaque
+              adipisci totam exercitationem.
+            </p>
+          </div>
+
+          <div>
+            <ul class="flex flex-col gap-8">
+              <li>
+                <div class="flex items-center gap-12">
+                  <div>
+                    <h3 class="mb-2 text-2xl text-white">Archetcture</h3>
+                    <p class="leading-relaxed">
+                      Lorem ipsum dolor sit, amet consec tetur adipisicing elit.
+                      Voluptatum et aperiam eaque.
+                    </p>
+                  </div>
+
+                  <div class="bg-neutral-900 rounded-tr-3xl">
+                    <Icon pack="iconoir" name="home-alt" class="w-5 m-4" />
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="flex items-center gap-12">
+                  <div>
+                    <h3 class="mb-2 text-2xl text-white">Archetcture</h3>
+                    <p class="leading-relaxed">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Voluptatum et aperiam eaque.
+                    </p>
+                  </div>
+
+                  <div class="bg-neutral-900 rounded-tr-3xl">
+                    <Icon pack="iconoir" name="home-alt" class="w-5 m-4" />
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="flex items-center gap-12">
+                  <div>
+                    <h3 class="mb-2 text-2xl text-white">Archetcture</h3>
+                    <p class="leading-relaxed">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Voluptatum et aperiam eaque.
+                    </p>
+                  </div>
+
+                  <div class="bg-neutral-900 rounded-br-3xl">
+                    <Icon pack="iconoir" name="home-alt" class="w-5 m-4" />
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Us -->
+    <section class="py-24 bg-[#fffbf4]">
+      <div class="mx-auto max-w-screen-xl">
+        <div class="grid gap-16 md:grid-cols-2 md:gap-0">
+          <!-- Image -->
+          <Image
+            src={aboutImage}
+            alt="Home"
+            class="self-center w-full h-full mx-auto px-6 sm:px-0 sm:pr-24 lg:pr-32"
+          />
+
+          <!-- Content -->
+          <div class="flex flex-col justify-center gap-12 px-6 pr-12">
+            <!-- Top -->
+            <div class="">
+              <h2 class="mb-4 font-bold">About Us</h2>
+              <p class="text-xl !leading-snug sm:text-3xl lg:text-4xl">
+                Our journey started with a small step we build for our house
+                which inspired many people to build comfortable and safe house.
+              </p>
+            </div>
+
+            <!-- Bottom -->
+            <div class="grid grid-cols-2 gap-6">
+              <div>
+                <Icon pack="iconoir" name="home-alt" class="w-6 mb-5" />
+                <h3 class="mb-3 text-xl">Detail Building</h3>
+                <p class="text-sm text-gray-600">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+              </div>
+
+              <div>
+                <Icon pack="iconoir" name="group" class="w-6 mb-5" />
+                <h3 class="mb-3 text-xl">Detail Building</h3>
+                <p class="text-sm text-gray-600">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+              </div>
+
+              <div>
+                <Icon pack="iconoir" name="group" class="w-6 mb-5" />
+                <h3 class="mb-3 text-xl">Detail Building</h3>
+                <p class="text-sm text-gray-600">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+              </div>
+
+              <div>
+                <Icon pack="iconoir" name="group" class="w-6 mb-5" />
+                <h3 class="mb-3 text-xl">Detail Building</h3>
+                <p class="text-sm text-gray-600">
+                  Lorem ipsum dolor sit amet consectetur.
+                </p>
+              </div>
+            </div>
+
+            <!-- Button -->
+            <a
+              href="/about"
+              class="inline-flex px-6 py-3 text-white bg-black max-w-fit"
+              >About Us</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Kappa -->
+    <section class="bg-black text-white px-12 lg:px-24 py-24 relative">
+      <div class="max-w-screen-2xl mx-auto">
+        <div>
+          <h2
+            class="text-3xl lg:text-6xl font-light text-center mb-20 max-w-screen-lg mx-auto">
+            Three simple steps, <br />to get easy passive income
+          </h2>
+
+          <ol class="flex flex-col gap-12 lg:flex-row justify-evenly">
+            {
+              [
+                { number: "01", action: "Sign Papers" },
+                { number: 02, action: "Property Renovation" },
+                { step: "03", action: "Collect Income" },
+              ].map((step) => (
+                <li class="flex items-center gap-4 border px-8 py-4 rounded-full lg:min-w-max lg:relative">
+                  <p class="font-bold text-4xl">{step.number}</p>
+                  <p class="text-xl">{step.action}</p>
+                </li>
+              ))
+            }
+          </ol>
+        </div>
+      </div>
+    </section>
+
+    <!-- We Have What Your Looking For -->
+    <section class="relative py-16 sm:py-24 bg-[#f8ebd6]">
+      <div class="mx-auto max-w-screen-lg px-6">
+        <div class="flex items-center">
+          <h2 class="text-6xl w-3/4">We have what you're looking for</h2>
+
+          <a
+            href="#"
+            class="inline-flex px-6 py-3 text-white bg-black justify-self-start w-fullmy">
+            Book your stay</a
+          >
+        </div>
+      </div>
+
+      <div class="absolute"></div>
+    </section>
+
+    <!-- Contact Us -->
+    <section class="py-16 sm:py-28 bg-[#fffbf4]">
+      <div
+        class="mx-auto max-w-3xl flex flex-col items-center px-6 text-center">
+        <h2 class="text-4xl sm:text-5xl mb-6">
+          Every stay should be memorable
+        </h2>
+        <p class="text-gray-600 mb-8">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati,
+          sapiente nemo eum tenetur, nostrum eos vel ut expedita iusto ad,
+          ratione.
+        </p>
+        <a href="#" class="inline-flex px-6 py-3 text-white bg-black">
+          Get in touch</a
+        >
+      </div>
+    </section>
+
+    <!-- <Roi /> -->
   </Container>
 </Layout>
