--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 
 import { Icon } from "astro-icon";
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 
 import keypadImage from "images/nest.jpg";
 import soundImage from "images/noiseaware.png";
