--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,28 +14,28 @@ import Contactform from "@components/contactform.astro";
       <Fragment slot="desc">We are a here to help.</Fragment>
     </Sectionhead>
 
-    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
+    <div class="grid max-w-4xl gap-10 mx-auto mt-16 md:grid-cols-2">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Get in touch with us</h2>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
+        <h2 class="text-2xl font-medium text-gray-800">Get in touch with us</h2>
+        <p class="mt-3 text-lg leading-relaxed text-slate-500">
           Reach out to us if you need assistance or have any questions. We're
           always here to help!
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-3 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
+            <Icon class="w-4 h-4 text-gray-400" name="mail" /><a
               href="mailto:info@lascasasstr.com">info@lascasasstr.com</a
             >
           </div>
 
           <div class="flex items-center mt-3 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
+            <Icon class="w-4 h-4 text-gray-400" name="phone" /><a
               href="tel:+16194311171">(619) 431-1171</a
             >
           </div>
 
           <div class="flex items-center mt-3 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:instagram" /><a
+            <Icon class="w-4 h-4 text-gray-400" name="instagram" /><a
               href="https://instagram.com/lascasas.str?igshid=YmMyMTA2M2Y="
               >@lascasas.str</a
             >
