--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,50 +1,55 @@
 ---
+import { Image } from "astro:assets";
+
 import { getCollection } from "astro:content";
 import { Picture } from "@astrojs/image/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 
-// Filter team entries with 'draft: false' & date before current date
-const publishedTeamMembers = await getCollection("team", ({ data }) => {
-  return !data.draft && data.publishDate < new Date();
-});
+import aboutImage from "assets/images/about.jpg";
 ---
 
 <Layout title="About">
-  <Container>
-    <h1 class="sr-only">About</h1>
+  <div class="max-w-screen-xl mx-auto px-6 h-full">
+    <div class="grid lg:grid-cols-5 gap-24 items-center">
+      <Image
+        src={aboutImage}
+        alt="Home"
+        class="relative w-full max-w-screen-lg mx-auto col-span-2"
+      />
 
-    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-12 sm:mt-16">
-      <h2 class="font-bold text-3xl text-gray-800 sr-only">
-        Mission Statement
-      </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        Our mission is to provide safe, comfortable, and affordable short-term
-        rental accommodations that exceed the expectations of our guests,
-        primarily but not limited to, traveling nurses, business professionals,
-        insurance claimants, and vacation travelers, while fostering a sense of
-        community and contributing to the growth and prosperity of the
-        neighborhoods in which we operate. We strive to continuously innovate
-        and enhance the guest experience through seamless technology,
-        personalized service, and a commitment to sustainability. Our ultimate
-        goal is to create meaningful and memorable stays for every guest, making
-        their travels effortless and enjoyable.
-      </p>
+      <div class="col-span-3">
+        <h1 class="text-3xl">About Us</h1>
 
-      <h2 class="font-bold text-3xl text-gray-800 sr-only">
-        Business Description
-      </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
-        Las Casas will offer a range of short-term rental properties, including
-        apartments, condominiums, and houses. All of our properties will be
-        uniquely furnished and equipped with modern amenities, including
-        high-speed internet, televisions, and kitchens stocked with basic
-        essentials. Our properties will also be professionally cleaned and
-        maintained, ensuring that they are always in top condition for our
-        guests. Additionally, we will offer 24/7 support to assist our guests
-        with any needs or concerns that may arise during their stay. We will be
-        based close to the city center to maximize visibility and accessibility.
-      </p>
+        <div class="flex flex-col gap-3 mt-4 text-lg">
+          <p class="leading-relaxed text-slate-500">
+            Our mission is to provide safe, comfortable, and affordable
+            short-term rental accommodations that exceed the expectations of our
+            guests, primarily but not limited to, traveling nurses, business
+            professionals, insurance claimants, and vacation travelers, while
+            fostering a sense of community and contributing to the growth and
+            prosperity of the neighborhoods in which we operate. We strive to
+            continuously innovate and enhance the guest experience through
+            seamless technology, personalized service, and a commitment to
+            sustainability. Our ultimate goal is to create meaningful and
+            memorable stays for every guest, making their travels effortless and
+            enjoyable.
+          </p>
+
+          <p class="leading-relaxed text-slate-500">
+            Las Casas will offer a range of short-term rental properties,
+            including apartments, condominiums, and houses. All of our
+            properties will be uniquely furnished and equipped with modern
+            amenities, including high-speed internet, televisions, and kitchens
+            stocked with basic essentials. Our properties will also be
+            professionally cleaned and maintained, ensuring that they are always
+            in top condition for our guests. Additionally, we will offer 24/7
+            support to assist our guests with any needs or concerns that may
+            arise during their stay. We will be based close to the city center
+            to maximize visibility and accessibility.
+          </p>
+        </div>
+      </div>
     </div>
-  </Container>
+  </div>
 </Layout>
