Fix responsive layout issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -246,7 +246,7 @@ import aboutImage from "assets/images/about.jpg";
           </h2>
 
           <ol
-            class="flex flex-col justify-center gap-12 mt-20 lg:flex-row lg:justify-evenly">
+            class="flex flex-col items-center justify-center gap-12 mt-20 lg:flex-row lg:justify-evenly">
             {
               [
                 { number: "01", action: "Residential Lease" },
@@ -272,13 +272,13 @@ import aboutImage from "assets/images/about.jpg";
 
     <!-- We Have What Your Looking For -->
     <section class="relative py-16 sm:py-24 bg-[#f8ebd6]">
-      <div class="max-w-screen-lg px-6 mx-auto">
-        <div class="flex items-center">
+      <div class="max-w-screen-lg px-6 mx-auto sm:px-16">
+        <div class="flex flex-col gap-12">
           <h2 class="w-3/4 text-6xl">Have any questions?</h2>
 
           <a
             href="/faq"
-            class="inline-flex px-6 py-3 text-white bg-black min-w-fit justify-self-start">
+            class="inline-flex px-6 py-3 text-white bg-black min-w-fit justify-self-start w-fit">
             Explore our FAQ</a
           >
         </div>
