--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,6 @@
 ---
 import { Image } from "astro:assets";
 
-import { getCollection } from "astro:content";
-import { Picture } from "@astrojs/image/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 
@@ -10,12 +8,12 @@ import aboutImage from "assets/images/about.jpg";
 ---
 
 <Layout title="About">
-  <div class="max-w-screen-xl mx-auto px-6 h-full">
-    <div class="grid lg:grid-cols-5 gap-24 items-center">
+  <div class="h-full max-w-screen-xl px-6 mx-auto">
+    <div class="grid items-center gap-24 lg:grid-cols-5">
       <Image
         src={aboutImage}
         alt="Home"
-        class="relative w-full max-w-screen-lg mx-auto col-span-2"
+        class="relative w-full max-w-screen-lg col-span-2 mx-auto"
       />
 
       <div class="col-span-3">
