--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -37,19 +37,19 @@ const faq = [
 
 <Layout title="Welcome to Astro.">
   <main>
-    <section class="px-4 sm:px-6 lg:px-8 py-12">
+    <section class="px-4 py-12 sm:px-6 lg:px-8">
       <div class="max-w-screen-xl mx-auto">
         <div class="max-w-2xl mb-16">
-          <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
+          <h1 class="text-4xl font-bold lg:text-5xl lg:tracking-tight">
             Frequently Asked Questions
           </h1>
-          <p class="text-lg mt-4 text-slate-600">
+          <p class="mt-4 text-lg text-slate-600">
             Everything you need to know about booking and partnering. Can't find
             what your looking for? Please message us directly.
           </p>
         </div>
 
-        <ul class="mb-16 grid gap-8 lg:gap-y-16 sm:grid-cols-2 lg:grid-cols-3">
+        <ul class="grid gap-8 mb-16 lg:gap-y-16 sm:grid-cols-2 lg:grid-cols-3">
           {
             faq.map((question) => (
               <li>
@@ -61,16 +61,16 @@ const faq = [
         </ul>
 
         <div
-          class="px-8 py-6 border flex flex-col sm:flex-row gap-8 items-center justify-between">
-          <div class="flex flex-col sm:flex-row gap-5 items-center">
+          class="flex flex-col items-center justify-between gap-8 px-8 py-6 border sm:flex-row">
+          <div class="flex flex-col items-center gap-5 sm:flex-row">
             <Image
               src={sweepingImage}
               alt="profile pic"
-              class="w-24 h-24 md:w-16 md:h-16 rounded-full"
+              class="w-24 h-24 rounded-full md:w-16 md:h-16"
             />
 
             <div class="text-center sm:text-left">
-              <h2 class="font-bold text-lg">Still have questions?</h2>
+              <h2 class="text-lg font-bold">Still have questions?</h2>
               <p class="">
                 Can't find the answer you're looking for? Please contact our
                 friendly team.
@@ -80,8 +80,7 @@ const faq = [
 
           <a
             href="/contact"
-            class="whitespace-nowrap rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent inline-flex gap-1 items-center justify-center">
-            <Icon name="peace-hand" class="invert w-5 mr-2" />
+            class="whitespace-nowrap transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent inline-flex gap-1 items-center justify-center">
             Get In Contact
           </a>
         </div>
