--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,11 +36,10 @@ import aboutImage from "assets/images/about.jpg";
           </p>
           <div>
             <a
-              href="#"
+              href="/book"
               class="inline-flex px-6 py-4 text-white bg-black animate__fadeIn animate__animated">
               Book Your Stay</a
             >
-            <a href="/contact"></a>
           </div>
         </div>
 
