--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 
 import Layout from "@layouts/Layout.astro";
@@ -36,7 +36,7 @@ import aboutImage from "assets/images/about.jpg";
           </p>
           <div>
             <a
-              href="/book"
+              href="https://airbnb.com/h/lacasitaoceanside"
               class="inline-flex px-6 py-4 text-white bg-black animate__fadeIn animate__animated">
               Book Your Stay</a
             >
