--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 
 import keypadImage from "images/nest.jpg";
