--- a/src/pages/stay.astro
+++ b/src/pages/stay.astro
@@ -1,8 +1,7 @@
 ---
+import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 
-import { Icon } from "astro-icon";
-import { Image } from "@astrojs/image/components";
 
 const points = [
   {
@@ -72,7 +71,7 @@ const points = [
         </div>
 
         <a
-          href=""
+          href="https://airbnb.com/h/lacasitaoceanside"
           class="w-fit mx-auto rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent flex gap-1 items-center justify-center">
           Book Stay Now
         </a>
