feat(app): update contacts

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,7 @@ import Logo from "@components/logo.astro";
 const socials = [
   {
     icon: "phone",
-    href: "tel:+16194311171",
+    href: "tel:+19514303646",
   },
   {
     icon: "mail",
@@ -14,7 +14,7 @@ const socials = [
   },
   {
     icon: "instagram",
-    href: "https://www.instagram.com/lascasas.str/?igshid=YmMyMTA2M2Y=",
+    href: "https://www.instagram.com/lascasas_rentals/?igshid=YmMyMTA2M2Y=",
   },
 ];
 ---
@@ -24,7 +24,7 @@ const socials = [
     <div class="grid items-center grid-cols-3">
       <Logo />
 
-      <p class="text-xs text-center">Copyright © 2023 LAS CASAS STR LLC</p>
+      <p class="text-xs text-center">Copyright © {new Date().getFullYear()} LAS CASAS STR LLC</p>
 
       <ul class="flex justify-end gap-6">
         {
