--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -30,14 +30,14 @@ import Contactform from "@components/contactform.astro";
 
           <div class="flex items-center mt-3 space-x-2 text-gray-600">
             <Icon class="w-4 h-4 text-gray-400" name="phone" /><a
-              href="tel:+16194311171">(619) 431-1171</a
+              href="tel:+19514303646">(951) 430-3646</a
             >
           </div>
 
           <div class="flex items-center mt-3 space-x-2 text-gray-600">
             <Icon class="w-4 h-4 text-gray-400" name="instagram" /><a
-              href="https://instagram.com/lascasas.str?igshid=YmMyMTA2M2Y="
-              >@lascasas.str</a
+              href="https://instagram.com/lascasas_rentals?igshid=YmMyMTA2M2Y="
+              >@lascasas_rentals</a
             >
           </div>
         </div>
